[bumpversion]
current_version = 0.1.0
commit = False
tag = False
files = ./pyspark_mc/version.py
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<n>\d+))?
serialize = 
	{major}.{minor}.{patch}

[metadata]
name = pyspark_mc
version = attr: pyspark_mc.version.__version__
description = attr: pyspark_mc.__doc__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NowanIlfideme/pyspark-mc
author = NowanIlfideme
author_email = git@nowan.dev
classifiers = 
    Programming Language :: Python :: 3.10


[options]
include_package_data = True
python_requires = >=3.7
packages = find_namespace:
install_requires = 
    pandas
    arviz
    pyspark
    pydantic_yaml[pyyaml]

[options.package_data]
* = *.yaml, *.yml, py.typed

[options.extras_require]
dev = 
    black
    flake8
    coverage
    pytest
    pytest-cov
    pytest-mock
	mypy
	bump2version
docs = 
	mkdocs
	mkdocs-material
	mkdocstrings
	pymdown-extensions
	pygments
